# pubmed-client

./: .biomeignore  .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PARSER_COVERAGE_REPORT.md  README-WASM.md  README-workspace.md  README.md  RELEASING.md  REPOSITORY_REVIEW.md  ROADMAP.md  TEST_COVERAGE_ANALYSIS.md  WASM-IMPLEMENTATION-STATUS.md  agent-lens.toml  dprint.json  mise.node.toml  mise.python.toml  mise.root.toml  mise.rust.toml  mise.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml  test_wasm.js  tsconfig.json  vitest.config.ts  wasm-types.d.ts
assets/: README.md
pubmed-cli/: Cargo.toml
pubmed-cli/src/: main.rs
pubmed-cli/src/commands/: batch.rs  citations.rs  citmatch.rs  convert.rs  espell.rs  export.rs  figures.rs  gquery.rs  info.rs  markdown.rs  metadata.rs  mod.rs  output.rs  related.rs  search.rs  storage.rs
pubmed-client/: Cargo.toml
pubmed-client-napi/: .gitignore  Cargo.toml  README.md  biome.json  index.d.ts  package.json  pnpm-lock.yaml  streaming.d.ts  streaming.js  tsconfig.json  tsconfig.typedoc.json  typedoc.json  vitest.config.ts
pubmed-client-napi/examples/: basic.ts  search-and-markdown.ts
pubmed-client-napi/src/: client.rs  config.rs  error.rs  lib.rs  models.rs  query.rs
pubmed-client-napi/tests/: client.test.ts  search-query.test.ts  setup.ts  streaming.test.ts
pubmed-client-py/: AUTOMATION_UPGRADE.md  Cargo.toml  README.md  STUB_GENERATION_MVP.md  STUB_GENERATION_RESEARCH.md  pubmed_client.pyi  pyproject.toml  stubtest-allowlist.txt
pubmed-client-py/docs/: Makefile  README.md  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst
pubmed-client-py/docs/api/: client.rst  models.rst  pmc.rst  pubmed.rst  query.rst
pubmed-client-py/docs/source/: api.rst  conf.py  index.md
pubmed-client-py/examples/: README.md
pubmed-client-py/scripts/: generate_stubs.sh  inspect_module.py
pubmed-client-py/src/: client.rs  config.rs  lib.rs  query.rs  utils.rs
pubmed-client-py/src/pmc/: client.rs  mod.rs  models.rs
pubmed-client-py/src/pubmed/: client.rs  mod.rs  models.rs
pubmed-client-py/tests/: README.md  conftest.py  test_client.py  test_config.py  test_integration.py  test_models.py  test_query.py  test_query_integration.py
pubmed-client-r/src/rust/: Cargo.toml
pubmed-client-r/src/rust/src/: lib.rs
pubmed-client-wasm/: .biomeignore  .npmignore  .npmrc  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
pubmed-client-wasm/src/: client.rs  config.rs  error.rs  lib.rs  models.rs  query.rs
pubmed-client-wasm/tests/: query.test.ts  setup.ts  simple.test.ts
pubmed-client/src/: cache.rs  config.rs  error.rs  lib.rs  rate_limit.rs  request.rs  retry.rs  time.rs
pubmed-client/src/common/: ids.rs  mod.rs  models.rs  xml_utils.rs
pubmed-client/src/europe_pmc/: citations.rs  client.rs  fulltext.rs  id.rs  links.rs  mod.rs  references.rs  search.rs  supplementary.rs
pubmed-client/src/pmc/: client.rs  cloud.rs  common.rs  extracted.rs  markdown.rs  mod.rs  models.rs  oa_api.rs  parser.rs  tar.rs
pubmed-client/src/pmc/parser/: author.rs  metadata.rs  mod.rs  reference.rs  section.rs  xml_utils.rs
pubmed-client/src/pubmed/: client.rs  export.rs  mod.rs  models.rs  parser.rs  responses.rs
pubmed-client/src/pubmed/client/: citmatch.rs  egquery.rs  einfo.rs  elink.rs  espell.rs  history.rs  mod.rs  summary.rs  xml_text.rs
pubmed-client/src/pubmed/parser/: batch.rs  converters.rs  deserializers.rs  mod.rs  preprocessing.rs  xml_types.rs
pubmed-client/src/pubmed/query/: advanced.rs  boolean.rs  builder.rs  date.rs  dates.rs  filters.rs  mod.rs  search.rs  validation.rs
pubmed-client/src/pubtator/: mod.rs
pubmed-client/tests/integration/: comprehensive_einfo_tests.rs  comprehensive_elink_tests.rs  comprehensive_pmc_tests.rs  comprehensive_pubmed_tests.rs  error_handling_tests.rs  markdown_tests.rs  pmc_api_tests.rs  pmc_xml_tests.rs  pubmed_api_tests.rs  test_abstract_parsing.rs  test_batch_fetch_api.rs  test_batch_fetch_mocked.rs  test_einfo_integration.rs  test_epost_mocked.rs  test_figure_extraction.rs  test_mesh_integration.rs  test_nxml_reading.rs  test_parser_coverage.rs  test_pmc_cache.rs  test_pmc_variants_parameterized.rs  test_rate_limiting_mocked.rs  test_real_api_rate_limiting.rs  test_search_options.rs  test_supplementary_materials.rs  test_tar_extraction.rs  test_webenv.rs
pubmed-client/tests/integration/api/: batch_fetch.rs  error_handling.rs  europe_pmc.rs  pmc.rs  pubmed.rs  rate_limiting.rs  webenv.rs
pubmed-client/tests/integration/common/: integration_test_utils.rs  mod.rs
pubmed-client/tests/integration/mocked/: batch_fetch.rs  cache.rs  cloud.rs  europe_pmc.rs  figures.rs  markdown.rs  pubtator.rs  rate_limiting.rs  reexports.rs  search_all.rs  supplementary.rs  tar.rs
pubmed-formatter/: Cargo.toml
pubmed-formatter/src/: lib.rs
pubmed-formatter/src/pmc/: markdown.rs  mod.rs
pubmed-formatter/src/pubmed/: export.rs  mod.rs
pubmed-mcp/: Cargo.toml  README.md
pubmed-mcp-server/: Cargo.toml  README.md
pubmed-mcp-server/src/: main.rs
pubmed-mcp-server/src/tools/: markdown.rs  mod.rs  search.rs
pubmed-mcp-server/tests/: integration_test.rs
pubmed-mcp/src/: main.rs
pubmed-mcp/src/tools/: citmatch.rs  common.rs  convert.rs  einfo.rs  elink.rs  espell.rs  export.rs  figures.rs  fulltext.rs  gquery.rs  markdown.rs  mod.rs  search.rs  summary.rs
pubmed-mcp/tests/: integration_test.rs
pubmed-parser/: Cargo.toml
pubmed-parser/benches/: pmc_parsing.rs  pubmed_parsing.rs
pubmed-parser/examples/: profile_parsing.rs
pubmed-parser/src/: README.md  error.rs  lib.rs
pubmed-parser/src/common/: ids.rs  mod.rs  models.rs  xml_utils.rs
pubmed-parser/src/europe_pmc/: citations.rs  de.rs  links.rs  mod.rs  models.rs  references.rs  search.rs
pubmed-parser/src/pmc/: domain.rs  mod.rs  models.rs  oa_api.rs
pubmed-parser/src/pubmed/: domain.rs  mod.rs  models.rs
pubmed-parser/src/pubtator/: mod.rs  models.rs
(+365 files in other folders)
