[workspace]
members = [
  "pubmed-cli",
  "pubmed-client",
  "pubmed-client-napi",
  "pubmed-client-py",
  "pubmed-client-wasm",
  "pubmed-formatter",
  "pubmed-mcp",
  "pubmed-parser",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["illumination-k"]
edition = "2024"
license = "MIT"
repository = "https://github.com/illumination-k/pubmed-client"

[workspace.dependencies]
anyhow = "1.0"
pubmed-formatter = { path = "pubmed-formatter" }
pubmed-parser = { path = "pubmed-parser" }
quick-xml = { version = "0.36", features = ["serialize"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
urlencoding = "2.1"

[profile.bench]
debug = true

[profile.profiling]
inherits = "release"
debug = true
