[workspace]
members = [
  "pubmed-cli",
  "pubmed-client",
  "pubmed-client-napi",
  "pubmed-client-py",
  "pubmed-client-wasm",
  "pubmed-formatter",
  "pubmed-mcp",
  "pubmed-parser",
  "pubmed-test-utils",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
authors = ["illumination-k"]
edition = "2024"
license = "MIT"
repository = "https://github.com/illumination-k/pubmed-client"

# Internal crate versions are kept in lock-step with [workspace.package] version
# by scripts/sync-versions.sh. The explicit `version` is required so the crates
# can be published to crates.io (path-only deps are rejected by `cargo publish`).
[workspace.dependencies]
anyhow = "1.0"
pubmed-client = { path = "pubmed-client", version = "0.3.0" }
pubmed-formatter = { path = "pubmed-formatter", version = "0.3.0" }
pubmed-parser = { path = "pubmed-parser", version = "0.3.0" }
pubmed-test-utils = { path = "pubmed-test-utils" }
quick-xml = { version = "0.41", features = ["serialize"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
urlencoding = "2.1"

[workspace.lints.clippy]
# Forbid `.unwrap()` / `.expect()` in non-test code. Tests, examples and
# benches are exempted via `allow-unwrap-in-tests` / `allow-expect-in-tests`
# in clippy.toml (and per-target allows where needed).
unwrap_used = "deny"
expect_used = "deny"

[profile.bench]
debug = true

[profile.profiling]
inherits = "release"
debug = true
