[package]
name = "pubmed-client-napi"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js native bindings for PubMed/PMC API client"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt", "async"] }
napi-derive = "2"
pubmed-client = { path = "../pubmed-client" }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
