[package]
name = "pubmed-client-napi"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js native bindings for PubMed/PMC API client"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4", "tokio_rt", "async"] }
napi-derive = "3"
# Use rustls-tls for cross-compilation (avoids OpenSSL linking issues with zigbuild)
# napi is published to npm (not crates.io), so a path dep is sufficient.
# default-features = false can't be set on an inherited workspace dep, so keep it direct.
pubmed-client = { path = "../pubmed-client", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
strip = "symbols"
