[package]
name = "pubmed-client-py"
version.workspace = true
authors.workspace = true
categories = ["api-bindings", "science", "web-programming::http-client"]
edition.workspace = true
keywords = ["pubmed", "python", "pyo3", "biomedical", "api"]
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Python bindings for the PubMed client library"

[lib]
name = "pubmed_client_py"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["stub-gen"]

[dependencies]
pubmed-client = { version = "0.1.0", path = "../pubmed-client" }

# PyO3 for Python bindings
pyo3 = { version = "0.26", features = ["extension-module"] }

# Re-export some core dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

# Stub generation (optional feature)
pyo3-stub-gen = { workspace = true, optional = true }
pyo3-stub-gen-derive = { workspace = true, optional = true }

[features]
default = []
stub-gen = ["pyo3-stub-gen", "pyo3-stub-gen-derive"]
