[package]
name = "pubmed-client"
version.workspace = true
authors.workspace = true
autotests = false
categories = ["api-bindings", "science", "web-programming::http-client"]
edition.workspace = true
keywords = ["pubmed", "biomedical", "research", "api", "pmc"]
license.workspace = true
readme = "../README.md"
repository.workspace = true
description = "An async Rust client for PubMed and PMC APIs for retrieving biomedical research articles"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
pubmed-formatter = { workspace = true }
pubmed-parser = { workspace = true }
quick-xml = { workspace = true }
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp"], optional = true }
regex = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = "0.3"
tracing = { workspace = true }
urlencoding = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "form"] }
tokio = { version = "1.0", features = ["full"] }
tokio-retry = "0.3"
tokio-util = "0.7"
tar = "0.4"
flate2 = "1.0"
futures-util = "0.3"
image = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.13", features = ["json", "form"], default-features = false }
tokio = { version = "1.0", features = ["macros", "rt", "time"], default-features = false }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls"]
integration-tests = []
cache-redis = ["dep:redis"]
cache-sqlite = ["dep:rusqlite"]

[dev-dependencies]
chrono = "0.4"
clap = { version = "3.2", features = ["derive"] }
paste = "1.0"
proptest = "1"
rstest = "0.18"
tempfile = "3.0"
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
wiremock = "0.6"

# --- Parsing tests (fixture-based, no network) ---

[[test]]
name = "parsing_pubmed"
path = "tests/integration/parsing/pubmed.rs"

[[test]]
name = "parsing_pmc"
path = "tests/integration/parsing/pmc.rs"

[[test]]
name = "parsing_einfo"
path = "tests/integration/parsing/einfo.rs"

[[test]]
name = "parsing_elink"
path = "tests/integration/parsing/elink.rs"

[[test]]
name = "parsing_esearch"
path = "tests/integration/parsing/esearch.rs"

[[test]]
name = "parsing_esummary"
path = "tests/integration/parsing/esummary.rs"

[[test]]
name = "parsing_ecitmatch"
path = "tests/integration/parsing/ecitmatch.rs"

[[test]]
name = "parsing_espell"
path = "tests/integration/parsing/espell.rs"

# --- Mocked tests (wiremock/offline, no network) ---

[[test]]
name = "mocked_markdown"
path = "tests/integration/mocked/markdown.rs"

[[test]]
name = "mocked_figures"
path = "tests/integration/mocked/figures.rs"

[[test]]
name = "mocked_supplementary"
path = "tests/integration/mocked/supplementary.rs"

[[test]]
name = "mocked_tar"
path = "tests/integration/mocked/tar.rs"

[[test]]
name = "mocked_cache"
path = "tests/integration/mocked/cache.rs"

[[test]]
name = "mocked_batch_fetch"
path = "tests/integration/mocked/batch_fetch.rs"

[[test]]
name = "mocked_search_options"
path = "tests/integration/mocked/search_options.rs"

[[test]]
name = "mocked_rate_limiting"
path = "tests/integration/mocked/rate_limiting.rs"

# --- API tests (opt-in, require network + PUBMED_REAL_API_TESTS=1) ---

[[test]]
name = "api_pubmed"
path = "tests/integration/api/pubmed.rs"

[[test]]
name = "api_pmc"
path = "tests/integration/api/pmc.rs"

[[test]]
name = "api_error_handling"
path = "tests/integration/api/error_handling.rs"

[[test]]
name = "api_rate_limiting"
path = "tests/integration/api/rate_limiting.rs"

[[test]]
name = "api_batch_fetch"
path = "tests/integration/api/batch_fetch.rs"

[[test]]
name = "api_webenv"
path = "tests/integration/api/webenv.rs"

[[test]]
name = "mocked_epost"
path = "tests/integration/test_epost_mocked.rs"
