[package]
name = "pubmed-mcp"
version.workspace = true
authors.workspace = true
categories = ["science", "api-bindings"]
edition.workspace = true
keywords = ["pubmed", "mcp", "biomedical", "literature", "api"]
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "MCP (Model Context Protocol) server for PubMed and PMC APIs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
pubmed-client = { version = "0.1.0", path = "../pubmed-client", package = "pubmed-client-rs" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# MCP Server dependencies
rmcp = { version = "0.8", features = ["server", "transport-io"] }
schemars = "0.8"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rmcp = { version = "0.8", features = ["client", "transport-child-process"] }

[[bin]]
name = "pubmed-mcp"
path = "src/main.rs"
