[package]
name = "pubmed-mcp"
version.workspace = true
authors.workspace = true
categories = ["science", "api-bindings"]
edition.workspace = true
keywords = ["pubmed", "mcp", "biomedical", "literature", "api"]
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "MCP (Model Context Protocol) server for PubMed and PMC APIs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
pubmed-client = { version = "0.1.0", path = "../pubmed-client" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# MCP Server dependencies
axum = "0.8"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.16", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }

[[bin]]
name = "pubmed-mcp"
path = "src/main.rs"
